<resources>
    <string name="app_name">WarehouseApp</string>
    <string name="loginButton">Zaloguj</string>
    <string name="emailField">E-mail</string>
    <string name="passwordField">Hasło</string>
    <string name="loginLabel">Zaloguj się</string>
    <string name="filter">Filtruj</string>
    <string name="sort">Sortuj</string>
    <string name="search">Szukaj...</string>
    <string name="add">Dodaj</string>
    <string name="place">Miejsce</string>
    <string name="register">Zarejestruj</string>
    <string name="registerLabel">Zarejestruj się</string>
    <string name="password">Hasło</string>
    <string name="repeatPassword">Powtórz hasło</string>
    <string name="name">Imię</string>
    <string name="lastName">Nazwisko</string>
    <string name="cancel">Anuluj</string>
    <string name="onlyActive">Wyświetlaj tylko potrzebne produkty</string>
    <string name="bought">Kupione!</string>
    <string name="productName">Nazwa produktu</string>
    <string name="count">Ilość</string>
    <string name="description">Uwagi (np. ewentualny zamiennik)</string>
    <string name="maxPrice">Maksymalna cena</string>
    <string name="pickImage">Wybierz zdjęcie</string>
    <string name="dateToBuyAdd">Data wygaśnięcia</string>
    <string name="dateToBuyFormat">DD/MM/RRRR</string>
    <string name="lowPriority">Mało ważne</string>
    <string name="mediumPriority">Ważne</string>
    <string name="highPriority">Bardzo ważne</string>
    <string name="profile">Profil</string>
    <string name="productslist">Lista zakupów</string>
    <string name="createGroup">Stwórz grupę</string>
    <string name="manageGroup">Zarządzaj grupą</string>
    <string name="invitesToGroup">Zaproszenia do grup</string>
    <string name="logout">Wyloguj</string>
    <string name="navigation_drawer_open">Otwieram menu</string>
    <string name="navigation_drawer_close">Zamykam menu</string>
    <string name="shoppingAssistant">Shopping Assistant</string>
    <string name="yourProducts">Twoje produkty</string>
    <string name="confirm">Potwierdź</string>
    <string name="passGroupName">Podaj nazwę grupy (nie możesz mieć dwóch grup o tej samej nazwie).</string>
    <string name="groupName">Nazwa grupy.</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="list">Lista zakupów</string>
    <string name="selectGroup">Wybierz grupę, którą chcesz zarządzać.</string>
    <string name="youHaveNoGroups">Nie jesteś właścicielem żadnej grupy.</string>
    <string name="back">Wróć</string>
    <string name="invite">Zaproś do grupy</string>
    <string name="leave">Opuść grupę</string>
    <string name="deleteGroup">Usuń grupę</string>
    <string name="passEmailOfInvited">Podaj Email osoby, którą chesz zaprosić do grupy.</string>
    <string name="decline">Odrzuć</string>
    <string name="accept">Akceptuj</string>
    <string name="noInvites">Nie masz żadnych zaproszeń do grup.</string>
    <string name="email">E-mail</string>
    <string name="descriptionShort">Uwagi</string>
    <string name="shop">Sklep</string>
    <string name="category">Kategoria</string>
    <string name="category2">Kategoria:</string>
    <string name="deafault">Domyślnie</string>
    <string name="FurthestDate">Najpóźniejszy termin zakupu</string>
    <string name="closestDate">Najbliższy termin zakupu</string>
    <string name="lowestPriority">Najmniej ważne</string>
    <string name="highestPriority">Najważniejsze</string>
    <string name="sortProducts">Sortuj produkty</string>
    <string name="allCategories">Wszystkie</string>
    <string name="others">Inne</string>
    <string name="homeUsage">Użytek domowy</string>
    <string name="food">Żywność</string>
    <string name="clothes">Odzież</string>
    <string name="filterProducts">Filtruj produkty</string>
</resources>