<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/icon_profil"
                android:title="@string/profile"></item>
            <item
                android:id="@+id/nav_list"
                android:icon="@drawable/icon_shoppinglist"
                android:title="@string/productslist"></item>
            <item
                android:id="@+id/nav_your_products"
                android:icon="@drawable/icon_yourproducts"
                android:title="@string/yourProducts"></item>
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_add_group"
                android:icon="@drawable/icon_group"
                android:title="@string/createGroup"></item>
            <item
                android:id="@+id/nav_manage_group"
                android:icon="@drawable/icon_managegroup"
                android:title="@string/manageGroup"></item>
            <item
                android:id="@+id/nav_invites"
                android:icon="@drawable/icon_invites"
                android:title="@string/invitesToGroup"></item>
        </menu>
    </item>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/icon_logout"
                android:title="@string/logout"></item>
        </menu>
    </item>
</menu>