<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/filterDialogLayout"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:clickable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/filterProducts"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/filterDialogClothes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/clothes"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/filterDialogFood"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/food"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/filterDialogHome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/homeUsage"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/filterDialogOthers"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/others"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/filterDialogNone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/allCategories"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>