<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/productImageAddE"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="15dp"
        android:onClick="onProductImageClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/camera" />


    <EditText
        android:id="@+id/productNameAddE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/productName"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImageAddE" />

    <EditText
        android:id="@+id/countAddE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameAddE" />

    <EditText
        android:id="@+id/maxPriceAddE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/maxPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countAddE" />

    <EditText
        android:id="@+id/noteAddE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"

        android:gravity="center|top"
        android:hint="@string/description"
        android:singleLine="true"
        android:lines="2"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPriceAddE" />

    <ImageView
        android:id="@+id/shopLogoAddE"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:onClick="onShopLogoClick"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupE"
        tools:srcCompat="@drawable/noneshop" />

    <Button
        android:id="@+id/cancelButtonE"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:onClick="onCancelButtonClick"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editButtonE" />

    <Button
        android:id="@+id/editButtonE"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:onClick="onEditButtonClick"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dateToBuyAddButtonE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onAddDateToBuyButton"
        android:text="@string/dateToBuyAdd"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteAddE" />

    <RadioGroup
        android:id="@+id/radioGroupE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateToBuyAddButtonE">


        <RadioButton
            android:id="@+id/lowPriorityButtonE"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/lowPriority" />

        <RadioButton
            android:id="@+id/mediumPriorityButtonE"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:text="@string/mediumPriority" />

        <RadioButton
            android:id="@+id/highPriorityButtonE"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/highPriority" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>