<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/productImageAdd"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:onClick="onProductImageClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/camera" />

    <EditText
        android:id="@+id/productNameAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/productName"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productImageAdd" />

    <EditText
        android:id="@+id/countAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameAdd" />

    <EditText
        android:id="@+id/maxPriceAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/maxPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countAdd" />

    <EditText
        android:id="@+id/noteAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center|top"
        android:hint="@string/description"
        android:singleLine="true"
        android:lines="2"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxPriceAdd" />

    <ImageView
        android:id="@+id/shopLogoAdd"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="18dp"
        android:onClick="onShopLogoClick"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/addActivityAddButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/noneshop" />

    <Button
        android:id="@+id/addActivityCancelButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:onClick="onAddActivityCancelButtonClick"
        android:text="@string/cancel"
        android:background="@drawable/btn_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addActivityAddButton" />

    <Button
        android:id="@+id/addActivityAddButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:onClick="onAddActivityAddButtonClick"
        android:text="@string/add"
        android:background="@drawable/btn_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dateToBuyAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onAddDateToBuyButton"
        android:text="@string/dateToBuyAdd"
        android:textAlignment="center"
        android:background="@drawable/btn_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteAdd" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateToBuyAddButton">


        <RadioButton
            android:id="@+id/lowPriorityButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/lowPriority" />

        <RadioButton
            android:id="@+id/mediumPriorityButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:checked="true"
            android:text="@string/mediumPriority" />

        <RadioButton
            android:id="@+id/highPriorityButton"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/highPriority" />
    </RadioGroup>

    <Button
        android:id="@+id/AddCategoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="11dp"
        android:text="@string/category"
        android:onClick="onAddCategoryButtonClick"
        android:background="@drawable/btn_bg"
        app:layout_constraintBottom_toTopOf="@+id/shopLogoAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>